<resources>
    <string name="app_name">MVVM</string>
    <string name="main_header_hello"><b>Hola</b> Doctor</string>
    <string name="main_header_desc">Lista de pacientes registrados</string>
    <string name="main_fab_desc">Crear nuevo paciente</string>
    <string name="layout_patient_noname"><b>Nombre no disponible</b></string>
    <string name="layout_patient_data">Informacion no disponible</string>
    <string name="newpatient_title"><b>Registrar</b> nuevo paciente</string>
    <string name="newpatient_form_names">Nombres del paciente</string>
    <string name="newpatient_form_names_hint">Nombres</string>
    <string name="newpatient_form_apepat_hint">Apellido Paterno</string>
    <string name="newpatient_form_apemat_hint">Apellido Materno</string>
    <string name="newpatient_form_dni_hint">DNI</string>
    <string name="newpatient_form_fecnac_hint">Fecha de nacimiento</string>
    <string name="newpatient_form_sexo">Sexo</string>
    <string name="newpatient_form_masculino">Masculino</string>
    <string name="newpatient_form_femenino">Femenino</string>
    <string name="newpatient_form_direccion">Dirección</string>
    <string name="editpatient_tv_peso">Peso:</string>
    <string name="editpatient_tv_temp">Temperatura:</string>
    <string name="editpatient_tv_sat">Saturación: </string>
    <string name="editpatient_tv_pres">Presión:</string>
    <string name="editpatient_title"><b>Editar</b> visita al paciente</string>
</resources>