<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">


    <ImageView
        android:id="@+id/np_icon_title"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/newpatient_title"
        android:textColor="@color/colorWhite"
        android:textSize="24dp"
        app:layout_constraintLeft_toRightOf="@id/np_icon_title"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/np_icon_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:minHeight="620dp"
        android:background="@drawable/np_form_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp"
        android:orientation="vertical">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/np_input_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpatient_form_names_hint"
            android:textColorHint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/np_tit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/np_input_apepat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpatient_form_apepat_hint"
            android:textColorHint="@color/accentColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/np_tit_apePat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/np_input_apemat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpatient_form_apemat_hint"
            android:textColorHint="@color/accentColor"
            app:layout_constraintLeft_toLeftOf="@+id/np_input_apepat"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/np_tit_apeMat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/np_input_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpatient_form_dni_hint"
            android:textColorHint="@color/accentColor"
            app:layout_constraintLeft_toLeftOf="@+id/np_input_apepat"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/np_tit_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/np_input_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpatient_form_direccion"
            android:textColorHint="@color/accentColor"
            app:layout_constraintLeft_toLeftOf="@+id/np_input_apepat"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/np_tit_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpatient_form_sexo"
            android:textColor="@color/colorBlack"/>
        <RadioGroup
            android:id="@+id/np_rg_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/np_rb_masculino">


            <RadioButton
                android:id="@+id/np_rb_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newpatient_form_masculino"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20dp"/>

            <RadioButton
                android:id="@+id/np_rb_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newpatient_form_femenino"
                android:textColor="@color/colorBlack"/>

        </RadioGroup>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/np_fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_save_24"
        app:tint="@color/colorWhite"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/np_fab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_cancel_24"
        app:tint="@color/colorWhite"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/np_fab_save"
        android:backgroundTint="@color/colorRed"/>





</androidx.constraintlayout.widget.ConstraintLayout>